# VML-PortTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: VMLBuild.cmake
extras/linker/: vmlport.ld
lib/: .gitkeep
src/: CMakeLists.txt  Debug.cs  Main.cs  Program.cs  dialog.c  dialog.h  heap.c  main.c
src/Content/: .gitkeep
src/Properties/: AssemblyInfo.cs
